[package]
name = "dotrinox-manager"
version = "0.1.0"
authors = ["zsigsza"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = "0.26.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
opener = "0.7.0"
